--- a/Iteración1.html
+++ b/Iteración1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Interacción con el DOM</title>
     <script src="./Iteración1.js" defer></script>
 </head>
 <body>
